added mysql on docker-compose

--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
       "start": "node index.js"
     },
     "dependencies": {
-      "express": "*"
+      "express": "*",
+      "mysql2": "*",
+      "dotenv": "*"
     }
 }
